# Hybrid-Search-RAGG

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.chainlit/: config.toml
.github/workflows/: ci.yml  publish.yml  test.yml
docker/: docker-compose.local.yml
docs/: DEVELOPMENT.md  VALIDATION.md  api.md  configuration.md  deployment.md  enhanced-search.md  installation.md  query-modes.md
docs/adr/: 0001-mongodb-single-database.md  0002-voyage-ai-embeddings.md  0003-hybrid-search-rrf.md  0004-prompts-module-architecture.md  0005-filter-builder-systems.md  0006-lexical-prefilters.md  0007-collection-naming-strategy.md  README.md
docs/cookbook/: 01-hybrid-search.md  02-lexical-prefilters.md  03-conversation-memory.md  04-vector-search-optimization.md  05-knowledge-graph.md  06-filtering-strategies.md  07-agent-memory-patterns.md  08-production-deployment.md  README.md  building-agents.md
examples/: 01_quickstart.py  02_hybrid_search.py  03_prompts_usage.py  04_mix_mode_search.py  05_web_ingestion.py  06_conversation_memory.py  07_custom_filters.py  08_evaluation_ragas.py  09_langgraph_agent.py  README.md
landing/: README.md  index.html
notebooks/: 01_getting_started.ipynb  02_hybrid_search_deep_dive.ipynb  03_knowledge_graph_exploration.ipynb  04_prompt_engineering.ipynb  05_performance_tuning.ipynb  README.md
src/hybridrag/: __init__.py
src/hybridrag/api/: __init__.py  main.py  models.py
src/hybridrag/cli/: __init__.py  __main__.py  app.py  main.py
src/hybridrag/config/: __init__.py  settings.py
src/hybridrag/core/: __init__.py  rag.py
src/hybridrag/engine/: __init__.py  base.py  base_engine.py  constants.py  exceptions.py  lightrag.py  namespace.py  operate.py  prompt.py  rerank.py  utils.py  utils_graph.py
src/hybridrag/enhancements/: __init__.py  entity_boosting.py  graph_search.py  implicit_expansion.py  mix_mode_search.py  mongodb_hybrid_search.py  query_optimizer.py
src/hybridrag/evaluation/: __init__.py  ragas_eval.py  sample_dataset.json
src/hybridrag/ingestion/: __init__.py  chunker.py  document_processor.py  pipeline.py  tavily_processor.py  types.py
src/hybridrag/integrations/: __init__.py  anthropic.py  gemini.py  langfuse.py  openai.py  rerank_instructions.py  voyage.py
src/hybridrag/memory/: __init__.py  conversation.py
src/hybridrag/migrations/: __init__.py  migrate_schema_validation.py
src/hybridrag/presets/: __init__.py  search_presets.py
src/hybridrag/prompts/: __init__.py  entity_extraction_prompt.py  memory_prompt.py  reranking_prompt.py  system_prompt.py  topic_extraction_prompt.py
src/hybridrag/ui/: __init__.py  chat.py
tests/: __init__.py  e2e_real_test.py  real_world_test.py  test_alice_comprehensive.py  test_comprehensive_e2e.py  test_conversation_memory.py  test_e2e.py  test_enhancements.py  test_gemini_session_isolation.py  test_query_only.py  test_real_e2e_conversation.py  test_voyage.py  verify_concurrency.py
tests/benchmarks/: conftest.py  test_search_performance.py
tests/enhancements/: test_atlas_search_filters.py  test_graph_search.py  test_lexical_prefilters.py  test_mix_mode_search.py  test_vector_search_filters.py
tests/examples/: __init__.py  test_langgraph_agent.py
tests/integration/: conftest.py  test_conversation_memory.py  test_full_rag_pipeline.py
website/landing/css/: animations.css  responsive.css  style.css
(+50 files in other folders)
